--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,30 @@
+.catalog-list{
+  width: 30%;
+  border-radius: 5px;
+  background-color: white;
+}
+.MuiTableContainer-root{
+  margin-top: 30px;
+  width: 30% !important;
+  max-height: 450px;
+}
+
+th{
+  text-align: center !important;
+}
+td{
+  text-align: center !important;
+  word-break: break-all !important;
+}
+
+
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
